# Recipe-Manager

./: .gitignore  CMakeLists.txt  Logs.txt
assets/: CMakeLists.txt
include/: CMakeConfig.hpp  CMakeLists.txt  debug_interceptor.hpp  managerdb.hpp  recipefetcher.hpp  user.hpp
queries/: create.sql  procedures.sql  recipes.sql  tables.sql  triggers.sql  userTable.sql  users.sql
src/: CMakeLists.txt  debug_interceptor.cpp  main.cpp  managerdb.cpp  recipefetcher.cpp  user.cpp
src_gui/: CMakeLists.txt  HomeForm.qml  LoginRegister.qml  Main.qml  Options.qml  Plan.qml  Recipes.qml  Search.qml  User.qml  ViewSearch.qml
src_gui/LoginRegisterComponents/: CMakeLists.txt  InputRow.qml  SubmitButton.qml  SwitchForm.qml  TextRow.qml
src_gui/SearchComponents/: IngredientsRow.qml  InputSearch.qml  SearchCheckbox.qml  SearchErrorRow.qml  SearchIndicator.qml  SearchResults.qml  SearchTextRow.qml  SubmitButton.qml
src_gui/UserComponents/: ImgEmpty.qml  ProfileImg.qml
